This fixes the mis-aligned backend menu in Firefox browsers! Recompiled assets

--- a/modules/backend/assets/css/controls.css
+++ b/modules/backend/assets/css/controls.css
@@ -556,7 +556,7 @@ html.cssanimations .cursor-loading-indicator.hide{display:none}
 .tooltip .tooltip-inner{text-align:left;padding:5px 8px}
 .tooltip.in{opacity:1;filter:alpha(opacity=100)}
 .oc-logo-white{background-image:url(../images/october-logo-white.svg);background-position:50% 50%;background-repeat:no-repeat;background-size:contain}
-.oc-bg-logo{background-image:url(../images/october-logo-transparent.svg);background-position:50% 50%;background-repeat:no-repeat;background-size:50% contain}
+.oc-bg-logo{background-image:url(../images/october-logo-transparent.svg);background-position:50% 50%;background-repeat:no-repeat;background-size:50% auto}
 .dropdown-menu{padding:0;background:transparent;border:none;-webkit-box-shadow:none;box-shadow:none}
 .dropdown-menu .dropdown-container > ul{border:1px solid #949ea6;background-color:#ffffff;border-radius:2px;padding:0;list-style:none;position:relative;margin-top:7px}
 .dropdown-menu .dropdown-container > ul:after{content:'';display:block;width:0;height:0;border-left:7.5px solid transparent;border-right:7.5px solid transparent;border-bottom:8px solid #ffffff;position:absolute;left:15px;top:-8px;z-index:101}
@@ -872,11 +872,12 @@ div.control-popover.hero .inspector-fields div.custom-select.select2-container .
 .select2-drop.ocInspectorDropdown .select2-search:after{position:absolute;font-family:FontAwesome;font-weight:normal;font-style:normal;text-decoration:inherit;-webkit-font-smoothing:antialiased;*margin-right:.3em;content:"\f002";right:8px;top:5px;color:#95a5a6}
 .select2-drop.ocInspectorDropdown .select2-search input.select2-input{min-height:26px;background:transparent !important;padding-left:12px;padding-right:12px}
 .select2-drop.ocInspectorDropdown.select2-drop-above .select2-search:after{top:7px}
-div[data-control="balloon-selector"] ul{padding:0;margin-bottom:0}
-div[data-control="balloon-selector"] ul li{list-style:none;display:inline-block;padding:6px 7px 5px;margin-right:5px;text-transform:uppercase;background:#bcc3c7;color:#ffffff;font-size:10px;line-height:100%;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;-webkit-transition:all 0.1s ease;transition:all 0.1s ease}
-div[data-control="balloon-selector"] ul li.active{background:#da5700 !important}
-div[data-control="balloon-selector"].control-disabled{opacity:0.5;filter:alpha(opacity=50)}
-div[data-control="balloon-selector"]:not(.control-disabled) ul li:hover{background:#0181b9;cursor:pointer}
+.control-balloon-selector ul{padding:0;margin-top:-5px}
+.control-balloon-selector ul li{list-style:none;display:inline-block;padding:6px 7px 5px;margin-right:5px;margin-top:6px;text-transform:uppercase;background:#bcc3c7;color:#ffffff;font-size:10px;line-height:100%;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;-webkit-transition:all 0.1s ease;transition:all 0.1s ease}
+.control-balloon-selector ul li.active{background:#da5700 !important}
+.control-balloon-selector.control-disabled{opacity:0.5;filter:alpha(opacity=50)}
+.control-balloon-selector:not(.control-disabled) ul li:hover{background:#0181b9;cursor:pointer}
+.form-group .control-balloon-selector ul{margin-bottom:0}
 .report-widget{padding:15px;background:white;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px}
 .report-widget h3{font-size:14px;color:#7e8c8d;text-transform:uppercase;font-weight:600;margin-top:0;margin-bottom:30px}
 .report-widget .height-100{height:100px}
