--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -2280,6 +2280,7 @@ nav#layout-mainmenu.navbar ul li.icon a{padding:14px}
 nav#layout-mainmenu.navbar ul li.power-off i,nav#layout-mainmenu.navbar ul li.preview i{font-size:20px}
 nav#layout-mainmenu.navbar ul li.power-off a,nav#layout-mainmenu.navbar ul li.preview a{padding:22px 20px 20px 20px}
 nav#layout-mainmenu.navbar ul li.account{margin-right:0;line-height:23px}
+nav#layout-mainmenu.navbar ul li.account a{padding-left:35px;padding-right:5px;position:relative;z-index:900}
 nav#layout-mainmenu.navbar ul li.account img{width:25px;margin-right:7px;position:relative;top:-2px}
 nav#layout-mainmenu.navbar ul.nav{display:inline-block}
 nav#layout-mainmenu.navbar .menu-toggle{display:none}
@@ -2289,10 +2290,20 @@ nav#layout-mainmenu.navbar .toolbar-item:before{left:-12px}
 nav#layout-mainmenu.navbar .toolbar-item:after{right:-12px}
 nav#layout-mainmenu.navbar .toolbar-item.scroll-active-before:before{color:#ffffff}
 nav#layout-mainmenu.navbar .toolbar-item.scroll-active-after:after{color:#ffffff}
+nav#layout-mainmenu.navbar ul li .mainmenu-accountmenu{position:fixed;top:63px;right:0;width:225px;background:#3d3d3d;z-index:900;display:none}
+nav#layout-mainmenu.navbar ul li .mainmenu-accountmenu.active{display:block}
+nav#layout-mainmenu.navbar ul li .mainmenu-accountmenu:after{content:'';display:block;width:0;height:0;border-left:11px solid transparent;border-right:11px solid transparent;border-bottom:12px solid #3d3d3d;right:101px;top:-12px;position:absolute}
+nav#layout-mainmenu.navbar ul li .mainmenu-accountmenu ul{padding:12px 30px;float:none;display:block}
+nav#layout-mainmenu.navbar ul li .mainmenu-accountmenu li{padding:0;font-weight:200;text-align:left;display:block}
+nav#layout-mainmenu.navbar ul li .mainmenu-accountmenu li a{display:block;padding:9px 0;text-align:left;opacity:.65}
+nav#layout-mainmenu.navbar ul li .mainmenu-accountmenu li a:hover{opacity:1}
+nav#layout-mainmenu.navbar ul li .mainmenu-accountmenu li.divider{height:1px;width:100%;margin:9px 0;overflow:hidden;background-color:transparent;border-top:1px solid #343434}
+@media (max-width:768px){nav#layout-mainmenu.navbar ul li .mainmenu-accountmenu:after{right:71px}
+}
 nav#layout-mainmenu.navbar ul li a,nav#layout-mainmenu .menu-toggle,.mainmenu-collapsed li a{padding:14px 0;display:inline-block;font-size:14px;color:inherit;outline:none}
 nav#layout-mainmenu.navbar ul li a:hover,nav#layout-mainmenu .menu-toggle:hover,.mainmenu-collapsed li a:hover{background-color:transparent !important}
 nav#layout-mainmenu.navbar ul li a:active,nav#layout-mainmenu .menu-toggle:active,.mainmenu-collapsed li a:active,nav#layout-mainmenu.navbar ul li a:focus,nav#layout-mainmenu .menu-toggle:focus,.mainmenu-collapsed li a:focus{text-decoration:none;color:#555555}
-nav#layout-mainmenu.navbar ul li a i,nav#layout-mainmenu .menu-toggle i,.mainmenu-collapsed li a i{font-size:35px;vertical-align:middle;margin-right:10px}
+nav#layout-mainmenu.navbar ul li a i,nav#layout-mainmenu .menu-toggle i,.mainmenu-collapsed li a i{line-height:1;font-size:35px;vertical-align:middle;margin-right:10px}
 .mainmenu-collapsed li a i{width:40px;text-align:left;display:inline-block}
 nav#layout-mainmenu.navbar ul li:hover a:active,.mainmenu-collapsed li:hover a:active,nav#layout-mainmenu.navbar ul li:hover a:focus,.mainmenu-collapsed li:hover a:focus{color:#ffffff !important}
 .touch .mainmenu-collapsed li a:hover{color:#555555}
@@ -2347,7 +2358,8 @@ body.mainmenu-open .mainmenu-collapsed ul{position:fixed;left:0;top:10px;bottom:
 body.side-panel-not-fixed #layout-side-panel{display:none}
 body.side-panel-not-fixed #layout-side-panel .fix-button{opacity:0.5;filter:alpha(opacity=50)}
 body.display-side-panel #layout-side-panel{display:block;position:absolute;z-index:500;width:300px;-webkit-box-shadow:2px 0px 2px 0 rgba(0,0,0,0.3);box-shadow:2px 0px 2px 0 rgba(0,0,0,0.3)}
-body.side-panel-fix-shadow #layout-side-panel{-webkit-box-shadow:none;box-shadow:none}
+@media (min-width:992px){body.side-panel-fix-shadow #layout-side-panel{-webkit-box-shadow:none;box-shadow:none}
+}
 .touch #layout-side-panel .fix-button{display:none}
 @media (max-width:768px){#layout-side-panel .fix-button{display:none}
 }
