--- a/modules/backend/assets/less/layout/mainmenu.less
+++ b/modules/backend/assets/less/layout/mainmenu.less
@@ -173,6 +173,7 @@ nav#layout-mainmenu .menu-toggle,
     }
 
     i {
+        line-height: 1;
         font-size: 35px;
         vertical-align: middle;
         margin-right: 10px;
